# learning-ai-coding-mcp-pandoc

./: AGENTREADME.md  PLANNING.md  README.md  TASKS.md  docker-compose.yml
.windsurf/rules/: mcp-server-sse.md
fast-mcp-pandoc/: DEPLOYMENT.md  DOCUMENTATION.md  Dockerfile  README.md  pyproject.toml
fast-mcp-pandoc/src/: __init__.py  models.py  server.py  worker.py
fast-mcp-pandoc/tests/: conftest.py  test_api_endpoints.py  test_sse_edge_cases.py  test_worker.py
